--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ dev_dependencies:
   flutter_gen_runner: 5.12.0
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
+  screenshot: ^3.0.0
   flutter_launcher_icons: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
